--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Curriculo</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://use.fontawesome.com/f61f724b87.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class = "container">
