--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a id="icon" href="https://www.facebook.com/tormoura"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a>
                     <a id="icon" href="https://twitter.com/VictorHugoSMour"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
                     <a id="icon" href="https://github.com/VictorHSMoura"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-                    <em class="sign">Desenvolvido por Victor Hugo Silva Moura</em>
+                    <em class="sign csign">Desenvolvido por Victor Hugo Silva Moura</em>
             </footer>
         </div>
     </body>
